# ASI-100725

./: .gitignore  sync-repo.sh
lab/: README.md
lab/concurrency/cpp/: README.md
lab/concurrency/cpp/App/: .gitignore
lab/concurrency/cpp/App/CppTasks/: CMakeLists.txt  README.md
lab/concurrency/cpp/App/CppTasks/include/: TradeDay.hpp  TradeDayProcessor.hpp
lab/concurrency/cpp/App/CppTasks/src/: TradeDay.cpp  TradeDayProcessor.cpp  main.cpp
lab/concurrency/cpp/App/CppTasks/tests/: sanity.cpp  test_tradedayprocessor.cpp
lab/concurrency/cpp/App/CppTasks/tests/fixtures/: testdata.csv
lab/concurrency/cs/: README.md
specialized-topics/cpp/security/: copilot-chat-security.md
specialized-topics/csharp/agentive-code-generation/: lambda.md
